src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.BodyContainer{
  display: grid | inline;
  align-items: center;
}

.LoginView {
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  grid-template-rows: 1fr 3fr 1fr;
  height: 500px;
  background-image: url('./images/dj-pic.jpg');
}

.LoginForm {
  display: grid;
  grid-area: 2/2/3/3;
  grid-template-columns: 1fr 1fr;
  background-color: #ECEBEB;
  height: auto;
  opacity: 0.9;
}

